Prevent table wrap and set max width

--- a/src/www/styles/components/draggable-table.less
+++ b/src/www/styles/components/draggable-table.less
@@ -15,6 +15,9 @@
             padding: 0 10px;
             text-align: left;
             font-family: 'IBM Plex Mono', monospace;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             .btn {
                 display: block;
